--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <title>Decision Making Analysis Tool</title>
-    <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
     <link rel="stylesheet" href="styles.css" type="text/css">
 </head>
 
@@ -25,6 +24,7 @@
 
 <button onclick="initializeApp()">Generate Lists</button>
 <button onclick="saveData()">Save Data</button>
+<button onclick="loadData()">Load Data</button>
 
     <div id="app-container" class="container">
         <div class="left-panel" id="left-panel">
