ダイアログで、ファイルの保存先を指定できるようにした

--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
 </div>
 
 <button onclick="initializeApp()">Generate Lists</button>
-<button onclick="saveData()">Save Data</button>
+<br>
 <button id="loadDataButton">Load Data</button>
+<button id="saveDataButton">Save Data</button>
 
     <div id="app-container" class="container">
         <div class="left-panel" id="left-panel">
