入力を改行区切りにした

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <body>
 <h2>Decision Making Analysis Tool</h2>
 <div style="display: flex;">
-    <div>評価基準 (Criteria ):<br>
+    <div>評価基準 (Criteria):<br>
         <textarea id="criteria-lists-input" rows="5" cols="60">cr1,cr2,cr3,</textarea>
     </div>
 
-    <div style="margin-left: 20px;">代替案 (Alternative):<br>
+    <div style="margin-left: 20px;">選択肢 (Alternative):<br>
         <textarea id="alternative-lists-input" rows="5" cols="60">al1,al2,al3,al4,al5,</textarea>
     </div>
 </div>
