--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 <body>
 <h2>Decision Making Analysis Tool</h2>
 <div style="display: flex;">
-    <div>評価基準 (Criteria):<br>
-        <textarea id="criteria-lists-input" rows="5" cols="60">cr1,cr2,cr3,</textarea>
+    <div>評価基準:<br>
+        <textarea id="criteria-lists-input" rows="5" cols="60" placeholder="評価基準を改行区切りで入力してください"></textarea>
     </div>
 
-    <div style="margin-left: 20px;">選択肢 (Alternative):<br>
-        <textarea id="alternative-lists-input" rows="5" cols="60">al1,al2,al3,al4,al5,</textarea>
+    <div style="margin-left: 20px;">選択肢:<br>
+        <textarea id="alternative-lists-input" rows="5" cols="60" placeholder="選択肢を改行区切りで入力してください"></textarea>
     </div>
 </div>
 
